--- a/index.html
+++ b/index.html
@@ -3,7 +3,182 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Curriculum Vitae | Hanif Aji Prasetyo</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="left-side">
+        <div class="profileText">
+          <div class="imgBx">
+            <img src="img.jpeg" />
+          </div>
+          <h2>Hanif Aji Prasetyo <br /><span>Informatics Student</span></h2>
+        </div>
+
+        <div class="contactInfo">
+          <h3 class="title">Contact Info</h3>
+          <ul>
+            <li>
+              <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
+              <span class="text">+6285 755 222 360</span>
+            </li>
+            <li>
+              <span class="icon"><i class="fa fa-envelope" aria-hidden="true"></i></span>
+              <span class="text">hanifaji007@gmail.com</span>
+            </li>
+            <li>
+              <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
+              <span class="text">
+                <a style="text-decoration: none" href="https://id.linkedin.com/in/hanif-aji-prasetyo-531a8a255?trk=people-guest_people_search-card">www.linkedin.com/hanif</a>
+              </span>
+            </li>
+            <li>
+              <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+              <span class="text">Blitar, East Java, Indonesia</span>
+            </li>
+          </ul>
+        </div>
+
+        <div class="contactInfo education">
+          <h3 class="title">Education</h3>
+          <ul>
+            <li>
+              <h5>2018 - 2021</h5>
+              <h4>Junior High School - Science</h4>
+              <h4>SMAN 3 Blitar</h4>
+            </li>
+            <li>
+              <h5>2021 - now</h5>
+              <h4>Bachelor Degree in Informatics Engineering</h4>
+              <h4>Politeknik Negeri Malang</h4>
+            </li>
+          </ul>
+        </div>
+
+        <div class="contactInfo language">
+          <h3 class="title">Languages</h3>
+          <ul>
+            <li>
+              <span class="text">English</span>
+              <span class="percent">
+                <div style="width: 50%"></div>
+              </span>
+            </li>
+            <li>
+              <span class="text">Indonesian</span>
+              <span class="percent">
+                <div style="width: 80%"></div>
+              </span>
+            </li>
+            <li>
+              <span class="text">Javanese</span>
+              <span class="percent">
+                <div style="width: 100%"></div>
+              </span>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="right-side">
+        <div class="about" style="margin-bottom: 20px">
+          <h2 class="title2">Profile</h2>
+          <p>
+            Having an ESFJ personality, I am someone who is always motivated to try new things, think critically and creatively.<br />
+            I have the ability to communicate well and has a great interest in the digital world. <br />Have training experience as Web Developer for 3 months.
+          </p>
+        </div>
+
+        <hr />
+
+        <div class="about" style="margin-top: 20px">
+          <h2 class="title2">Projects</h2>
+          <div class="box">
+            <div class="project_type">
+              <h5>Dynamic Website</h5>
+              <h5 style="text-transform: capitalize">as Backend Developer</h5>
+            </div>
+            <div class="text">
+              <h4>
+                <a href="https://github.com/HanifAjiPrasetyo/kelompok6_proyek_web" style="text-decoration: none"> Web-based Rental Information System </a>
+              </h4>
+              <p>This project is a web-based rental information system. It is built with PHP, MySQL, Bootstrap, JavaScript, jQuery, and Bootstrap.</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="project_type">
+              <h5>Static Website</h5>
+              <h5 style="text-transform: capitalize">as developer</h5>
+            </div>
+            <div class="text">
+              <h4><a href="https://hanifajiprasetyo.github.io/AlamNusantara/" style="text-decoration: none">Web-based Tourist Attraction in Indonesia</a></h4>
+              <p>This project is a web-based tourist attraction in Indonesia. It is built with HTML, CSS, & Javascript</p>
+            </div>
+          </div>
+        </div>
+
+        <hr />
+
+        <div class="about skills" style="margin-top: 20px">
+          <h2 class="title2">Professional Skills</h2>
+          <div class="box">
+            <h4>HTML</h4>
+            <div class="percent">
+              <div style="width: 90%"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>CSS</h4>
+            <div class="percent">
+              <div style="width: 75%"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>JAVASCRIPT</h4>
+            <div class="percent">
+              <div style="width: 65%"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>PHP</h4>
+            <div class="percent">
+              <div style="width: 55%"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>MySQL</h4>
+            <div class="percent">
+              <div style="width: 75%"></div>
+            </div>
+          </div>
+          <div class="box">
+            <h4>MS Office</h4>
+            <div class="percent">
+              <div style="width: 70%"></div>
+            </div>
+          </div>
+        </div>
+
+        <hr />
+
+        <div class="about interest" style="margin-top: 20px">
+          <h2 class="title2">Interest</h2>
+          <ul>
+            <li><i class="fa fa-gamepad" aria-hidden="true"></i> Gaming</li>
+            <li><i class="fa fa-motorcycle" aria-hidden="true"></i> Riding</li>
+            <li><i class="fa fa-film" aria-hidden="true"></i> Movies</li>
+            <li><i class="fa fa-headphones" aria-hidden="true"></i> Music</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
